--- a/src/popup.html
+++ b/src/popup.html
@@ -53,7 +53,7 @@
 			font-size: inherit;
 			padding: 5px 8px;
 			padding-left: 8px;
-			margin: 1rem;
+			margin: 1rem 1rem 0 1rem;
 		}
 
 		input:hover {
@@ -65,11 +65,29 @@
 			box-shadow: 0 0 0 1px var(--in-content-border-active), 0 0 0 4px var(--in-content-border-active-shadow);
 			outline: none;
 		}
+
+		button {
+			appearance: none;
+			border: 1px solid var(--in-content-box-border-color);
+			border-radius: 2px;
+			color: inherit;
+			background-color: var(--in-content-box-background);
+			font-family: inherit;
+			font-size: inherit;
+			text-align: center;
+			padding: 5px 8px;
+			margin: 1rem;
+		}
+
+		button:hover {
+			border-color: var(--in-content-border-hover);
+		}
 	</style>
 </head>
 <body>
 	<div class="qr"></div>
 	<input type="text" placeholder="QR Text"/>
+	<button>Save</button>
 	<script src="qrcode.min.js"></script>
 	<script src="app.js"></script>
 </body>
