--- a/src/popup.html
+++ b/src/popup.html
@@ -26,65 +26,72 @@
 			width: 100%;
 		}
 		:root {
-			--in-content-page-color: #0c0c0d;
-			--in-content-page-background: #f9f9fa;
-			--in-content-box-border-color: var(--grey-90-a30);
+			--in-content-page-color: #15141a;
+			--in-content-page-background: #fff;
+			--in-content-box-border-color: color-mix(in srgb, currentColor 41%, transparent);
 			--in-content-box-background: #fff;
-			--in-content-border-hover: var(--grey-90-a50);
-			--in-content-border-active: var(--blue-50);
-			--in-content-border-active-shadow: var(--blue-50-a30);
-			--grey-90-a30: #0c0c0d4d;
-			--grey-90-a50: #0c0c0d80;
-			--blue-50: #0a84ff;
-			--blue-50-a30: #0a84ff4d;
+			--in-content-focus-outline-color: var(--in-content-primary-button-background);
+			--in-content-button-border-radius: 4px;
+			--in-content-button-horizontal-padding: 15px;
+			--in-content-button-vertical-padding: 7px;
+			--in-content-primary-button-text-color: #fbfbfe;
+			--in-content-primary-button-text-color-hover: var(--in-content-primary-button-text-color);
+			--in-content-primary-button-background: #0061e0;
+			--in-content-primary-button-background-hover: #0250bb;
 		}
 
 		@media (prefers-color-scheme: dark){
 			:root {
-				--in-content-page-background: #2A2A2E;
-				--in-content-page-color: #f9f9fa;
-				--in-content-box-background: #202023;
-				--in-content-border-hover: #f9f9fa4d;
+				--in-content-page-background: #1c1b22;
+				--in-content-page-color: #fbfbfe;
+				--in-content-box-background: #23222b;
+				--in-content-primary-button-text-color: #2b2a33;
+				--in-content-primary-button-background: #0df;
+				--in-content-primary-button-background-hover: #80ebff;
+				--in-content-primary-button-background-active: #aaf2ff;
 			}
 		}
 		input {
 			appearance: none;
 			border: 1px solid var(--in-content-box-border-color);
-			border-radius: 2px;
+			border-radius: 4px;
 			color: inherit;
 			background-color: var(--in-content-box-background);
 			font-family: inherit;
 			font-size: inherit;
-			padding: 5px 8px;
-			padding-left: 8px;
+			padding: 2px 2px 3px;
+			padding-inline: 8px;
 			margin: 1rem 1rem 0 1rem;
 		}
 
-		input:hover {
-			border-color: var(--in-content-border-hover);
-		}
-
 		input:focus {
-			border-color: var(--in-content-border-active);
-			box-shadow: 0 0 0 1px var(--in-content-border-active), 0 0 0 4px var(--in-content-border-active-shadow);
-			outline: none;
+			border-color: transparent;
+			outline: 2px solid var(--in-content-focus-outline-color);
+			outline-offset: -1px;
 		}
 
 		.save {
-			border: 1px solid var(--in-content-box-border-color);
-			border-radius: 2px;
-			color: inherit;
-			background-color: var(--in-content-box-background);
+			border: 1px solid transparent;
+			border-radius: var(--in-content-button-border-radius);
+			background-color: var(--in-content-primary-button-background);
+			color: var(--in-content-primary-button-text-color);
 			font-family: inherit;
 			font-size: inherit;
 			text-align: center;
 			text-decoration: none;
-			padding: 5px 8px;
+			padding: var(--in-content-button-vertical-padding) var(--in-content-button-horizontal-padding);
 			margin: 1rem;
 		}
 
 		.save:hover {
-			border-color: var(--in-content-border-hover);
+			background-color: var(--in-content-primary-button-background-hover);
+			color: var(--in-content-primary-button-text-color-hover);
+		}
+
+		.save:focus-visible {
+			box-shadow: none;
+			outline: 2px solid var(--in-content-focus-outline-color);
+			outline-offset: 2px;
 		}
 	</style>
 </head>
